# cinema-monitor

./: .gitignore  README.md  TODO.md  agents.md  element.txt  project-description.md  project.md  pyproject.toml  requirements.txt  seat_status_sample.json  seatplan_sample.json
.github/workflows/: ci.yml
docs/: architecture.md  decisions.md  improvements.md  index.md  overview.md  quickstart.md  reference.md  seatmap-debug.md  seatmap_renderer.md  troubleshooting.md
docs/how-to/: custom-notifier.md  date-sweep.md
docs/tutorials/: daily-monitor.md  seat-selector.md
legacy/: .test_monitor.py  .test_seat_counter.py  monitor.py  seat_counter.py
src/: advisor.py  config.py  date_sweep.py  logging_setup.py  main.py  monitor.py  notifier.py  scheduler.py  screenings.py  screenings_browser.py  seat_counter.py  seat_map.py  seat_selection.py  seatmap_fetcher.py  seatmap_renderer.py
tests/: test_advisor.py  test_date_sweep.py  test_monitor.py  test_notifier.py  test_scheduler.py  test_screenings.py  test_screenings_browser.py  test_seat_counter.py  test_seat_map.py  test_seat_selection.py  test_seatmap_fetcher_module.py  test_seatmap_renderer.py
tests/fixtures/: movie_page.html  presentation_api.json  seat_status_api.json  seatmap_page.html  seatplan_api.json
